--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "welcome-messages-plugin",
-  "keywords": ["resourcemod", "plugin", "rmod", "connect-messages"],
-  "version": "1.0.2",
+  "keywords": ["resourcemod", "plugin", "rmod", "connect-messages", "rmod-plugin"],
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "author": "Twelvee",
   "license": "GPL-3.0",
   "dependencies": {
-    "resourcemod": "^1.0.14"
+    "resourcemod": "^1.0.19"
   }
 }
